--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
   </head>
   <body>
-    <h3>ideabox</h3>
-    <div id="title">
-      <input type="text" name="title" placeholder="Title">
-    </div>
-    <div id="body">
-      <input type="text" name="body" placeholder="Body">
-    </div>
-    <div id="button">
-      <button type="button">save</button>
-    </div>
-    <div id="search">
-      <input type="search" name="search" placeholder="Search">
+    <div id="center-div">
+      <div id="bg-color">
+        <h3><a class="idea">idea</a><a class="box">box</a></h3>
+        <div id="title">
+          <input type="text" name="title" placeholder="Title">
+        </div>
+        <div id="body">
+          <input type="text" name="body" placeholder="Body">
+        </div>
+        <div id="button">
+          <button type="button">save</button>
+        </div>
+      </div>
+        <div id="search">
+          <input type="search" name="search" placeholder="Search">
+        </div>
     </div>
   </body>
 </html>
