basic styling and layout complete

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <body>
     <div id="center-div">
       <div id="bg-color">
-        <h3><a class="idea">idea</a><a class="box">box</a></h3>
+        <h1><a class="idea">idea</a><a class="box">box</a></h1>
         <div id="title">
-          <input type="text" name="title" placeholder="Title">
+          <input class="input-text" type="text" name="title" placeholder="Title">
         </div>
         <div id="body">
-          <input type="text" name="body" placeholder="Body">
+          <input class="input-text" type="text" name="body" placeholder="Body">
         </div>
         <div id="button">
-          <button type="button">save</button>
+          <button type="button" class="button">save</button>
         </div>
       </div>
         <div id="search">
-          <input type="search" name="search" placeholder="Search">
+          <input class="input-text" type="search" name="search" placeholder="Search">
         </div>
     </div>
   </body>
