ideas save to localstorage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>ideabox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <script type="text/javascript" src="ideas.js"></script>
   </head>
   <body>
     <div id="center-div">
@@ -15,7 +16,7 @@
           <input class="input-text" type="text" name="body" placeholder="Body">
         </div>
         <div id="button">
-          <button type="button" class="button">save</button>
+          <button type="button" class="button" onclick="saveIdea()">save</button>
         </div>
       </div>
         <div id="search">
