--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div id="search">
           <input class="input-text" type="search" name="search" placeholder="Search">
         </div>
+      <div id="ideas">
+      </div>
     </div>
   </body>
 </html>
